Vote-1032: Fix to sign up button wrapping

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-sign-up.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-sign-up.scss
@@ -17,23 +17,22 @@
     }
 
     .usa-input {
-        height: 100%;
         border-radius: 4px;
         border: 1px $bg-light-medium solid;
 
         @include at-media('tablet') {
-            width:70%;
+            width: 70%;
         }
     }
 
     .usa-button {
         @include u-padding-y('105');
-        height: 38px;
 
         @include at-media('tablet') {
             @include u-margin-top(1);
             @include u-margin-right(0);
             @include u-margin-left(2);
+            width: 6.25rem;
         }
     }
 }
